...
    )
}

@Serializable
enum class HomeSectionLayout(val label: String) {
    List("List"),
    Grid("Grid"),
    Carousel("Carousel"),
}

@Serializable
enum class HomeSectionPageLayout(val label: String) {
    List("List"),
...
